--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,20 +10,24 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campground.location%></li>
+                <li class="list-group-item">Submitted by: <%= campground.author.username%></li>
                 <li class="list-group-item">$<%= campground.price%>/night</li>
             </ul>
+            <% if(currentUser && currentUser._id.equals(campground.author._id)) {%>
             <div class="card-body">
                 <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
+            <% } %>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
         </div>
     </div>
     <div class="col-6">
+        <% if(currentUser) {%>
         <h2>Leave A Review!</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
             <div class="mb-3">
@@ -39,14 +43,18 @@
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
+        <% } %>
         <% for(let review of campground.reviews) { %>
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">Rating: <%= review.rating %></h5>
+                <h6 class="card-subtitle mb-2 text-muted">By: <%= review.author.username %></h6>
                 <p class="card-text">Review: <%= review.body %></p>
+                <% if(currentUser && currentUser._id.equals(review.author._id)) {%>
                 <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                     <button class="btn btn-sm btn-danger">Delete</button>
                 </form>
+                <% } %>
             </div>
         </div>
         <% } %>
