Adding cypress to the project

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -15,5 +15,5 @@
             Looks good!
         </div>
     </div>
-    <button class="btn btn-success">Login</button>
+    <button name="loginButton"class="btn btn-success">Login</button>
 </form>
