--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -22,5 +22,5 @@
             Looks good!
         </div>
     </div>
-    <button class="btn btn-success">Register</button>
+    <button name="registerButton" class="btn btn-success">Register</button>
 </form>
