--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -46,6 +46,7 @@
         </div>
     </div>
     <div class="col-6">
+        <div id="map"></div>
         <% if(currentUser) {%>
         <h2>Leave A Review!</h2>
         <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
@@ -99,3 +100,9 @@
         <% } %>
     </div>
 </div>
+
+<script>
+    const mapToken = '<%- process.env.MAPTILER_TOKEN %>';
+    const campground = <%- JSON.stringify(campground) %>;
+</script>
+<script src="/javascripts/showPageMap.js"></script>
