--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate')%>
+<div id="map" style="width: 100%; height: 500px;"></div>
 
 <h1>All Campgrounds</h1>
 <div>
@@ -27,3 +28,8 @@
     </div>
 </div>
 <% }%>
+<script>
+    const mapToken = '<%- process.env.MAPTILER_TOKEN %>';
+    const campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
+</script>
+<script src="/javascripts/clusterMap.js"></script>
