--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -24,7 +24,7 @@
                                 Looks good!
                             </div>
                         </div>
-                        <button class="btn btn-success btn-block">Login</button>
+                        <button class="btn btn-success btn-block" name="loginButton">Login</button>
                     </form>
                 </div>
             </div>
