--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -29,7 +29,7 @@
                                 Looks good!
                             </div>
                         </div>
-                        <button class="btn btn-success btn-block">Register</button>
+                        <button class="btn btn-success btn-block" name="registerButton">Register</button>
                     </form>
 
                 </div>
